2006-08-21  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* nsd/return.c: Use our own defined macros HTTP11_HDR_TE
	and HTTP11_HDR_TE_ENCODED insead of plain strings.

2006-08-14  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* include/ns.h: Added definitions for poll() emulation
	under Windows, as we do not include poll.h there.
	Also, defined ETIMEDOUT so we get the compilation done.
	The defined value for ETIMEDOUT has no other meaning
	then to be accepted by eventual strerror() so we had
	to "invent" something appropriate. Unfortunately the
	build-in set of errno values in Windows does not seem
	to have any "near" candidate to the Unix pendant so 
	we just defined it to one (1). This way it will at least
	work, albeit not have too much sense in error messages.

2006-08-13  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* tests/ns_proxy.test: Test for [ns_proxy handles ?pool?]
	* nsproxy/nsproxylib.c: Fixed PushProxy() to honour 
	proxies without associated slave to be set for expiration.

	* nsd/log.c: Rewritten caching of log entries to use 
	separate caches for entry structures and log texts.
	Attempt to stuff both in a dynamic string and cast
	when needed did not work on some architectures because
	of padding/alignment requirements.

2006-08-12  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* nsproxy/nsproxylib.c: Removed Ns_Log calls outside the
	global locks in ReaperThread as this may lead to deadlocks
	in Ns_ProxyInit() when somebody registered Tcl callbacks
	to the ns_log facility. If the current thread has never
	loaded an Tcl interpreter (and the reaper thread does not
	do that explicitly) one will be loaded at the latest at 
	that point when first call to Ns_Log has been made and 
	there is a Tcl callback registered. In this scenario, the
	Ns_ProxyInit will be called by the server Tcl tracing
	facility and this will lock the global proxy lock. If at
	that time somebody is already holding the global lock, 